# gputoy

./: .gitignore  LICENSE.md  README.md  build_naga.sh  next.config.js  package-lock.json  package.json  tsconfig.json
docs/: README.md
naga-compiler/: Cargo.toml
naga-compiler/src/: lib.rs
pages/: 404.tsx  _app.tsx  browse.tsx  create.tsx  documentation.tsx  embed.tsx  index.tsx  market.tsx  projects.tsx  test.tsx
pages/api/: myprojects.ts  project.ts
pages/components/: canvas.tsx  navbar.tsx
pages/create/: [pid].tsx  index.tsx
pages/editor/: [pid].tsx  index.tsx
pages/projects/: [id].tsx  index.tsx
pkg/: naga_compiler.d.ts  naga_compiler.js  naga_compiler_bg.wasm  naga_compiler_bg.wasm.d.ts  package.json
planning/: create-flow.pseudo
prisma/: schema.prisma
public/: runner.schema.json
shaders/: baseWarpFBM.glsl  basicShader.wgsl  compute.wgsl  decay.wgsl  diffuse.wgsl  draw.wgsl  resolutionScalingTest.wgsl  simpleRayMarch.wgsl  stolenFromShadertoy.wgsl  test_fs.wgsl
src/: params.json  wgpu_context.ts
src/components/: canvas.tsx  editor.tsx  footer.tsx  gpuController.tsx  navbar.tsx  panel.tsx  params.tsx  projectManager.tsx  scaffold.tsx  user.tsx  viewpanel.tsx  warning.tsx
src/database/: args.ts  prisma.ts  selectors.ts  validators.ts
src/gpu/: compiler.ts  console.ts  error.ts  gpu.ts  gpu.tsx  params.ts  project.ts  project.tsx  projectDirect.ts  staticdecl.ts  status.ts  types.ts
src/monaco/: completions.ts  (+7 more)
styles/: Home.module.css  actionbar.css  create.css  globals.css  index.css  prism-custom-light.css  prism-custom.css
(+184 files in other folders)
