[package]
name = "naga-compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
naga = {version = "0.7.1", features = ["glsl-in", "wgsl-in", "spv-out"]}
js-sys =  "0.3.45"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = 's'
