[package]
name = "naga-compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
naga = { git="https://github.com/gfx-rs/naga.git", features = ["glsl-in", "wgsl-in", "wgsl-out", "serde", "serialize"]}
js-sys =  "0.3.45"
console_error_panic_hook = "0.1.7"
serde = { version="1.0", features = ["derive"] }
ron = "0.6"
lazy_static = "1.4.0"
serde_json = "1.0.70"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[profile.release]
lto = true
opt-level = 's'
